sm/sm-b2b-connector/main/default/objects/WebCart/fields/B2B_PriceBook_Id__c.field-meta.xml
<CustomField>
    <fullName>B2B_PriceBook_Id__c</fullName>
    <label>B2B PriceBook Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>