sm/sm-b2b-connector/main/default/objects/WebCart/fields/Cart_Type__c.field-meta.xml
<CustomField>
    <fullName>Cart_Type__c</fullName>
    <label>Cart Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Amend</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Amend/Extend</fullName>
            </value>
            <value>
                <fullName>RFQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>