sm/sm-b2b-connector/main/default/objects/WebCart/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <label>Total Discount</label>
    <summarizedField>CartItem.Discount__c</summarizedField>
    <summaryForeignKey>CartItem.CartId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>